Avances hasta aritmetica modular

--- a/main.tex
+++ b/main.tex
@@ -15,8 +15,10 @@
 \usepackage{minted}
 \usepackage{float}
 
-\color{white}
-\pagecolor{black} %black
+%\color{white}
+%\pagecolor{black} %black
+
+\input{commands.tex}
 
 \usetikzlibrary{positioning}
 \usetikzlibrary{decorations.pathreplacing,calligraphy,backgrounds}
