Avances hasta MCD

--- a/commands.tex
+++ b/commands.tex
@@ -3,3 +3,6 @@
 \newcommand{\division}{\text{ div }}
 
 \newcommand{\modulo}{\text{ mod }}
+
+%Operador de Maximo Comun Divisor (Greatest Common Divisor)
+%\newcommand{\gcd}[#1][]{\text{ gcd }({#1})}
