Avances hasta ecuaciones de congruencia lineales

--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 \usepackage[spanish]{babel}
 \usepackage{amsmath}
+\usepackage{xfrac}
 \usepackage{mathbbol}
 \usepackage{fullpage}
 \usepackage[table, x11names]{xcolor}
