Adicion archivo grafos.tex

--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,9 @@
 %Macrosección de Teoría de Números
 \subfile{sections/numero.tex}
 
+%Macrosección de Teoría de Grafos
+\subfile{sections/grafos.tex}
+
 %------Anexo---------------------
 \newpage
 
