--- a/sections/grafos.tex
+++ b/sections/grafos.tex
@@ -123,6 +123,25 @@ Para un grafo $G = (V,E)$ y dos vertices $u,v \in V$
 \end{itemize}
 
 \subsection{Subgrafos}
-Un grafo $G' = (V',E')$ es un subgrafo de $G = (V,E)$ si $V' \subseteq V$ y $E' \subseteq E$, y se escribe como $G' \subseteq G$
+Un grafo $G' = (V',E')$ es un subgrafo de $G = (V,E)$ si $V' \subseteq V$ y $E' \subseteq E$, y se escribe como $G' \subseteq G$.
+
+\subsection{Coloraciones}
+Las coloraciones en un grafo permiten visualizar algunas cosas con mayor facilidad. Un claro ejemplo de esto es en un \textit{Grafo de conflictos}.\footnote{Esto queda mejor explicado con un ejemplo, el cual puede encontrar en las presentaciones de clase (Clase29 - Coloraciones, caminos y ciclos). Sería muy tedioso colocarlo acá y ya hicieron un buen trabajo en la presentación.}
+
+Una k-coloración de un grafo $G = (V,E)$ es una función $C: V \rightarrow \{0, 1, \ldots, k-1\}$ tal que para todo $u,v \in V$, si $\{u,v\} \in E$, entonces $C(u) \not= C(v)$.
+
+Denotaremos como $\chi(G)$ al mínimo valor que puede adoptar $k$ tal que $G = (V,E)$ tenga una k-coloración. A este valor $\chi(G)$ lo llamaremos ``número cromático''. Cabe destacar que encontrar el número cromático es un problema muy complicado (se resume en colorear manualmente el grafo y probar hasta que se logre encontrar un valor que no se pueda disminuir).
+
+\subsection{Caminos}
+Un camino de un grafo $G = (V,E)$ corresponde a una secuencia de nodos del grafo, tal que cada nodo este conectado con el siguiente de la cadena, segun $E$.
+
+\subsubsection{Camino simple}
+Un camino simple de un grafo $G = (V,E)$ corresponde a lo mismo que se definió anteriormente, pero además, añadiendo el requisito de que no se repitan nodos en la secuencia (o sea, que el camino no pase por el mismo lugar más de una vez).
+
+\subsection{Conexidad}
+Primero que nada, se dice que dos vertices de un grafo estan conectados si es que existe un camino de uno al otro. De ahí, sale la definición de un grafo conexo, el cual consiste en un grafo en donde todos los nodos estan conectados entre sí.
+
+Para un grafo $G = (V,E)$, se define la relación $R_G: V \times V$, tal que $(u,v) \in R_G$ si y solo si $u$ esta conectado con $v$.
+
 
 \end{document}
