Adicion de Indice a Main

--- a/main.tex
+++ b/main.tex
@@ -26,12 +26,21 @@
 
 \graphicspath{{img/}{../img/}}
 
+
+
 \title{Resumen general de Matemáticas Discretas}
 \author{Andrés Cabezas y Sebastián Poblete}
+
 
 \begin{document}
 
 \maketitle
+
+%Indice
+\setcounter{tocdepth}{1}
+\tableofcontents
+\newpage
+
 
 %Macrosección de Lógica Proposicional
 \subfile{sections/lp.tex}
@@ -50,8 +59,12 @@
 
 %------Anexo---------------------
 \newpage
-
 \subfile{sections/anexo.tex}
+
+%Agradecimientos
+\newpage
+\subfile{sections/thx.tex}
+
 
 
 
